--- a/templates/404.html.erb
+++ b/templates/404.html.erb
@@ -1,19 +1,45 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Page Not Found</title>
+    <title>404 Page Not Found</title>
+    <style type="text/css" media="screen">
+      .normal { color: #fff; }
+      .comment { color: #005; font-style: italic; }
+      .keyword { color: #A44; font-weight: bold; }
+      .method { color: #44f; }
+      .class { color: #0c4; }
+      .module { color: #050; }
+      .punct { color: #668; font-weight: bold; }
+      .symbol { color: #ff0; }
+      .string { color: #4f4; }
+      .char { color: #F07; }
+      .ident { color: #fff; }
+      .constant { color: #0c4; }
+      .regex { color: #B66; background: #FEF; }
+      .number { color: #F99; }
+      .attribute { color: #fc4; }
+      .global { color: #7FB; }
+      .expr { color: #227; }
+      .escape { color: #277; }
+    </style>
   </head>
   <body>
-    <h1>Page Not Found</h1>
+    <h1><span style="color:red">404</span> Page Not Found</h1>
+
+    <% unless @params.nil? %>
+      <h2>Params</h2>
+      <%= @params.inspect %>
+    <% end %>
+
     <h2>Routes</h2>
     <% unless @routes.empty? %>
       <ul>
-        <li>
-          <% @routes.each do |route| %>
-            <%= route.match_pattern.inspect %>
-            <%= route.match_params.inspect if route.match_params %>
-          <% end %>
-        </li>
+        <% @routes.each do |route| %>
+          <li>
+            <%= syntax(route.match_pattern.inspect) %>
+            <%= syntax(route.match_params.inspect) unless route.match_params.empty? %>
+          </li>
+        <% end %>
       <% else %>
         Any route is defined. Please edit your <code><%= @router %></code>.
       <% end %>
