--- a/rango.gemspec.erb
+++ b/rango.gemspec.erb
@@ -18,14 +18,26 @@ end
   s.description = "" # TODO: long description
   s.cert_chain = nil
   s.email = ["knava.bestvinensis", "gmail.com"].join("@")
+
+  # files
   s.files = Dir.glob("**/*") - Dir.glob("pkg/*")
   s.executables = ["rango"]
   s.default_executable = "rango"
+  s.require_paths = ["lib"]
+
+  # Ruby version
+  s.required_ruby_version = ::Gem::Requirement.new(">= 1.9.1")
+
+  # runtime dependencies
   s.add_dependency "rack"
-  # s.add_dependency "thor"
   s.add_dependency "extlib"
   s.add_dependency "path"
-  s.require_paths = ["lib"]
-  s.required_ruby_version = ::Gem::Requirement.new(">= 1.9.1")
+
+  # development dependencies
+  # use gem install rango --development if you want to install them
+  s.add_development_dependency "erubis"
+  s.add_development_dependency "thor"
+
+  # RubyForge
   s.rubyforge_project = "rango"
 end
