--- a/rango.gemspec.erb
+++ b/rango.gemspec.erb
@@ -11,7 +11,7 @@ end
 
 ::Gem::Specification.new do |s|
   s.name = "rango"
-  s.version = <%= Rango::VERSION %>
+  s.version = "<%= Rango::VERSION %>"
   s.authors = ["Jakub Šťastný aka Botanicus"]
   s.homepage = "http://github.com/botanicus/rango"
   s.summary = "Rango is ultralightweight, ultracustomizable, ultracool web framework deeply inspired by Django."
