--- a/lib/rango/contrib/pagination/_pagination.html.haml
+++ b/lib/rango/contrib/pagination/_pagination.html.haml
@@ -4,8 +4,8 @@
 / 6  7  8  9 10 <11> 12 13 14 15 16
 - unless page.max.eql?(1)
   - if page.previous
-    /= link_to "<< Předchozí", "?page=#{page.previous.number}"
-    != link_to "<< Předchozí", Page.route(request, page, page.previous.number)
+    /= link_to "<< Previous", "?page=#{page.previous.number}"
+    != link_to "<< Previous", Page.route(request, page, page.previous.number)
   - if page.max <= 11
     - (1..page.max).each do |pagenum|
       - if page.number.eql?(pagenum)
@@ -35,5 +35,5 @@
         /= link_to pagenum, "?page=#{pagenum}"
         != link_to pagenum, Page.route(request, page, pagenum)
   - if page.next
-    /= link_to "Další >>", "?page=#{page.next.number}"
-    != link_to "Další >>", Page.route(request, page, page.next.number)
+    /= link_to "Next >>", "?page=#{page.next.number}"
+    != link_to "Next >>", Page.route(request, page, page.next.number)
