Improved project generator

--- a/stubs/project/content/templates/index.html.haml
+++ b/stubs/project/content/templates/index.html.haml
@@ -21,4 +21,12 @@
       %li
         %a{href: "http://wiki.github.com/botanicus/rango"} Rango Wiki
       %li
+        %a{href: "http://rdoc.info/projects/botanicus/rango"} Rango API
+      %li
+        %a{href: "http://github.com/botanicus/rango-examples"} Rango Examples
+      %li
         %a{href: "http://github.com/botanicus/rango/issues"} Rango Issue Tracker
+      %li
+        %a{href: "https://twitter.com/RangoProject"} @RangoProject
+      %li
+        %a{href: "http://botanicus.github.com/rango"} Rango Blog
