Abort boot if the environment doesn't exist, added some more links into index.html

--- a/stubs/project/content/templates/index.html.haml
+++ b/stubs/project/content/templates/index.html.haml
@@ -13,8 +13,8 @@
     %ul
       %li Run specs: <code>rake spec</code>
 
-  #links
-    %h2 Links
+  #documentation
+    %h2 Documentation
     %ul
       %li
         %a{href: "http://wiki.github.com/botanicus/rango/tutorial"} Rango Tutorial
@@ -24,6 +24,11 @@
         %a{href: "http://rdoc.info/projects/botanicus/rango"} Rango API
       %li
         %a{href: "http://github.com/botanicus/rango-examples"} Rango Examples
+
+  #links
+    %h2 Links
+    %ul
+      %li IRC: #rango at irc://irc.freenode.net
       %li
         %a{href: "http://github.com/botanicus/rango/issues"} Rango Issue Tracker
       %li
