Fixed welcome screen

--- a/stubs/stack/content/templates/index.html.haml
+++ b/stubs/stack/content/templates/index.html.haml
@@ -11,7 +11,7 @@
   #next-steps
     %h2 Next Steps
     %ul
-      %li Run specs: <code>rake spec</code>
+      %li Run specs: <code>./tasks.rb spec</code>
 
   #documentation
     %h2 Documentation
